swagger add and user some work :)
